[tool.poetry]
name = "tuba"
version = "0.1.0"
description = "Manage a personal list of youtube channel subscriptions"
authors = ["Sean F. Cleator <work@sfcleator.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
yt-dlp = "*"
black = "*"
isort = "^5.12.0"
autoflake = "^2.2.1"
beautifulsoup4 = "^4.12.2"
pyright = "^1.1.337"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line_length=100

[tool.pyright]
typeCheckingMode="strict"
reportMissingTypeStubs=false
